fix: collapse height transition

--- a/src/sass/components/_collapse.scss
+++ b/src/sass/components/_collapse.scss
@@ -5,13 +5,23 @@
 
   &__main {
     background-color: #f6f6f6;
-    padding: 16px;
     border-radius: 0 0 5px 5px;
     font-size: 24px;
 
-    margin-top: -3px;
-
     line-height: 34px;
+
+    height: 0;
+    transition: height 200ms ease-out;
+    overflow: hidden;
+
+    &--active {
+      transition: height 200ms ease-out 100ms;
+      height: auto;
+    }
+
+    & > * {
+      margin: 16px;
+    }
 
     @include media-tablet {
       font-size: calc(24px * 0.75);
@@ -35,11 +45,18 @@
     justify-content: space-between;
     align-items: center;
 
+    height: 50px;
     padding: 0 16px;
-
     border-radius: 5px;
 
-    height: 50px;
+    transition: border-radius 100ms ease-out 200ms;
+
+    &--active {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+
+      transition: border-radius 100ms ease-out;
+    }
 
     @include media-tablet {
       height: calc(50px * 0.75);
